--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -8,6 +8,7 @@
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +25,13 @@
 }
 
 .characterWrapper {
+  min-height: 500px;
+  position: fixed;
+  width: 500px;
+  left: 55%;
+  top: 128px;
 }
 
 .controlColumn {
+  max-width: 50%;
 }
